# kicad-layout-mcp

./: .gitignore  pyproject.toml
ai-schematic-and-pcb-main/ai-schematic-and-pcb-main/kicad-layout-mcp/: README.md
kicad_layout_mcp/: pipeline.py  server.py
kicad_layout_mcp/core/: circuit.py  sexpr.py  validate.py
kicad_layout_mcp/pcb/: drc.py  placer.py  router.py  silkscreen.py  writer.py
kicad_layout_mcp/preview/: render.py
kicad_layout_mcp/schematic/: labeler.py  placer.py  router.py  writer.py
tests/: test_end_to_end.py
